--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,31 @@ matrix:
       env: TARGET_OS=win QT=5
       os: linux
       dist: xenial
-      services: docker
+#      services: docker
+      addons:
+        apt:
+          sources:
+            - sourceline: deb https://pkg.mxe.cc/repos/apt xenial main
+              key_url: https://pkg.mxe.cc/repos/apt/client-conf/mxeapt.gpg
+          packages:
+            - mxe-i686-w64-mingw32.static-cairo # poppler dependency
+            - mxe-i686-w64-mingw32.static-curl # poppler dependency
+            - mxe-i686-w64-mingw32.static-freetype # poppler dependency
+            - mxe-i686-w64-mingw32.static-glib # poppler dependency
+            - mxe-i686-w64-mingw32.static-hunspell
+            - mxe-i686-w64-mingw32.static-jpeg # poppler dependency
+            - mxe-i686-w64-mingw32.static-lcms # poppler dependency
+            - mxe-i686-w64-mingw32.static-libpng # poppler dependency
+            - mxe-i686-w64-mingw32.static-libwebp # poppler dependency
+            - mxe-i686-w64-mingw32.static-lua
+            - mxe-i686-w64-mingw32.static-openjpeg # poppler dependency
+#            - mxe-i686-w64-mingw32.static-poppler
+            - mxe-i686-w64-mingw32.static-qtbase # poppler dependency
+            - mxe-i686-w64-mingw32.static-qtscript
+            # mxe-i686-w64-mingw32.static-qttools, mxe-i686-w64-mingw32.static-qttranslations
+            - mxe-i686-w64-mingw32.static-tiff # poppler dependency
+            - mxe-i686-w64-mingw32.static-zlib # poppler dependency
+
 #    - name: "Windows (MSVC)"
 #      env: TARGET_OS=win QT=5
 #      os: windows
