--- a/.travis.yml
+++ b/.travis.yml
@@ -60,32 +60,18 @@ matrix:
       dist: xenial
       addons:
         apt:
-          sources:
-            - sourceline: deb https://pkg.mxe.cc/repos/apt xenial main
-              key_url: http://keyserver.ubuntu.com/pks/lookup?op=get&options=mr&search=0xC6BF758A33A3A276
           packages:
-            - mxe-i686-w64-mingw32.static-cairo # poppler dependency
-            - mxe-i686-w64-mingw32.static-curl # poppler dependency
-            - mxe-i686-w64-mingw32.static-freetype # poppler dependency
-            - mxe-i686-w64-mingw32.static-glib # poppler dependency
-            - mxe-i686-w64-mingw32.static-hunspell
-            - mxe-i686-w64-mingw32.static-jpeg # poppler dependency
-            - mxe-i686-w64-mingw32.static-lcms # poppler dependency
-            - mxe-i686-w64-mingw32.static-libpng # poppler dependency
-            - mxe-i686-w64-mingw32.static-libwebp # poppler dependency
-            - mxe-i686-w64-mingw32.static-lua
-            - mxe-i686-w64-mingw32.static-openjpeg # poppler dependency
-#            - mxe-i686-w64-mingw32.static-poppler
-            - mxe-i686-w64-mingw32.static-qtbase # poppler dependency
-            - mxe-i686-w64-mingw32.static-qtscript
-            - mxe-i686-w64-mingw32.static-qttools
-            - mxe-i686-w64-mingw32.static-tiff # poppler dependency
-            - mxe-i686-w64-mingw32.static-zlib # poppler dependency
-
-#    - name: "Windows (MSVC)"
-#      env: TARGET_OS=win QT=5
-#      os: windows
-
+            - qtbase5-dev
+            - qtscript5-dev
+            - qttools5-dev
+            - qttools5-dev-tools
+            - zlib1g-dev
+            - libhunspell-dev
+            - libpoppler-qt5-dev
+            - libpoppler-private-dev
+            - poppler-data
+            - liblua5.2-dev
+            - lcov
 
 before_install:
   - ${TRAVIS_BUILD_DIR}/ci/travis-ci/get-dependencies.sh
