Fix building the InterProcessCommunicator on Mac OS X
On the Mac, programs are naturally single-instance, therefore I added a
dummy IPC that does nothing.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,9 @@ set(TEXWORKS_HDRS BibTeXFile.h
 if (WIN32)
   list(APPEND TEXWORKS_HDRS DefaultBinaryPathsWin.h)
   list(APPEND TEXWORKS_SRCS InterProcessCommunicatorWin.cpp)
+elseif (APPLE)
+  list(APPEND TEXWORKS_HDRS DefaultBinaryPaths.h)
+  list(APPEND TEXWORKS_SRCS InterProcessCommunicatorDummy.cpp)
 else ()
   list(APPEND TEXWORKS_HDRS DefaultBinaryPaths.h)
   list(APPEND TEXWORKS_SRCS InterProcessCommunicatorDBus.cpp)
