--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Build
       run: make
+      working-directory: build
 
     - name: Test
       run: make test
+      working-directory: build
