--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Build
-      run: make
+      run: make -j
       working-directory: build
 
     - name: Test
