--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 #        modules: qtscript
 
     - name: Install Dependencies
-      run: sudo apt install qtbase5-dev qtscript5-dev qttools5-dev qttools5-dev-tools zlib1g-dev libhunspell-dev libpoppler-qt5-dev libpoppler-private-dev liblua5.3-dev
+      run: sudo apt install qtbase5-dev qtscript5-dev qttools5-dev qttools5-dev-tools zlib1g-dev libhunspell-dev libpoppler-qt5-dev libpoppler-private-dev liblua5.3-dev xvfb
 
     # Runs a single command using the runners shell
     - name: Configure
@@ -41,5 +41,5 @@ jobs:
       working-directory: build
 
     - name: Test
-      run: ctest -V
+      run: xvfb-run ctest -V
       working-directory: build
