--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        brew update
+        brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install qt5
         brew install poppler
         brew install hunspell
