--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
   build-win:
     name: Build on Windows
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
 
     steps:
     - name: Checkout
@@ -61,7 +64,7 @@ jobs:
         echo "${{ github.workspace }}"
         mkdir build
         cd build
-        cmake -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=$env:VCPKG_INSTALLATION_ROOT\scripts\buildsystems\vcpkg.cmake ${{ github.workspace }}
+        cmake -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}\scripts\buildsystems\vcpkg.cmake ${{ github.workspace }}
 
     - name: Build
       run: make -j
