--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,14 +59,10 @@ jobs:
         vcpkg install hunspell:x64-windows lua:x64-windows zlib:x64-windows
 
     - name: Configure
-      run: |
-        mkdir build
-        cd build
-        cmake -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake ${GITHUB_WORKSPACE}
+      run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake ${GITHUB_WORKSPACE}
 
     - name: Build
-      run: make -j
-      working-directory: build
+      run: cmake --build build
 
     - name: Test
       run: ctest -V
