Debug output: vcpkg installed files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
     - name: Install Dependencies
       run: |
         vcpkg install hunspell:x64-windows lua:x64-windows zlib:x64-windows
+        find C:/vcpkg/packages/
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake ${GITHUB_WORKSPACE}
