--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,7 @@ jobs:
         modules: 'qtscript'
 
     - name: Build Poppler
-      shell: python
-      run: .github/workflows/build-poppler.py
+      run: python .github/workflows/build-poppler.py
 
     - name: Install Dependencies
       run: |
