--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,35 +41,52 @@ jobs:
   build-win:
     name: Build on Windows
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
+#    defaults:
+#      run:
+#        shell: bash
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Install Dependencies
-      run: |
-        vcpkg install hunspell:x64-windows lua:x64-windows zlib:x64-windows freetype:x64-windows lcms:x64-windows libjpeg-turbo:x64-windows
-        find C:/vcpkg/packages/
-
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v2
+#    - name: Install Dependencies
+#      run: |
+#        vcpkg install hunspell:x64-windows lua:x64-windows zlib:x64-windows freetype:x64-windows lcms:x64-windows libjpeg-turbo:x64-windows
+#        find C:/vcpkg/packages/
+#
+#    - name: Install Qt
+#      uses: jurplel/install-qt-action@v2
+#      with:
+#        modules: 'qtscript'
+#
+#    - name: Build Poppler
+#      run: python .github/workflows/build-poppler.py
+#
+#    - name: Configure
+#      run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake ${GITHUB_WORKSPACE}
+#
+#    - name: Build
+#      run: cmake --build build
+#
+#    - name: Test
+#      run: ctest -V
+#      working-directory: build
+    - name: Setup MSYS
+      uses: numworks/setup-msys2@v1
       with:
-        modules: 'qtscript'
+        update: true
 
-    - name: Build Poppler
-      run: python .github/workflows/build-poppler.py
+    - name: Install dependencies
+      run: msys2do pacman --noconfirm -U cmake mingw-w64-qt5-static mingw-w64-poppler mingw-w64-hunspell mingw-w64-lua
 
     - name: Configure
-      run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake ${GITHUB_WORKSPACE}
+      run: msys2do cmake -B build -DTW_BUILD_ID='github'
 
     - name: Build
-      run: cmake --build build
+      run: msys2do cmake --build build
 
     - name: Test
-      run: ctest -V
+      run: msys2do ctest -V
       working-directory: build
 
   build-macosx:
