--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,8 @@ jobs:
       with:
         update: true
 
+    - run: msys2do pacman --noconfirm -Ss poppler
+
     - name: Install dependencies
       run: msys2do pacman --noconfirm -S cmake mingw-w64-qt5-static mingw-w64-poppler mingw-w64-hunspell mingw-w64-lua
 
