--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,10 +88,10 @@ jobs:
     - run: msys2do pacman --noconfirm -Ql mingw-w64-x86_64-cmake
 
     - name: Configure
-      run: msys2do mingw-w64-cmake -B build -DTW_BUILD_ID='github'
+      run: msys2do cmake -G "MSYS Makefiles" -B build -DTW_BUILD_ID='github'
 
     - name: Build
-      run: msys2do mingw-w64-cmake --build build
+      run: msys2do cmake --build build
 
     - name: Test
       run: msys2do ctest -V
