--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,9 @@ jobs:
     - run: msys2do pacman --noconfirm -Ql mingw-w64-x86_64-cmake
 
     - name: Configure
-      run: msys2do cmake -G \"MSYS Makefiles\" -B build -DTW_BUILD_ID='github'
+      env:
+        GENERATOR: MSYS Makefiles
+      run: msys2do cmake -G $GENERATOR -B build -DTW_BUILD_ID='github'
 
     - name: Build
       run: msys2do cmake --build build
