--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,9 @@ jobs:
   build-win:
     name: Build on Windows
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
+#    defaults:
+#      run:
+#        shell: bash
 
     steps:
     - name: Checkout
@@ -88,7 +88,7 @@ jobs:
     - run: msys2do pacman --noconfirm -Ql mingw-w64-x86_64-cmake
 
     - name: Configure
-      run: msys2do cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'
+      run: msys2do cmake -G """MSYS Makefiles""" -B build -DTW_BUILD_ID='github'
 
     - name: Build
       run: msys2do cmake --build build
