--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,8 @@ jobs:
     - run: msys2do pacman --noconfirm -Ql mingw-w64-x86_64-cmake
 
     - name: Configure
-      run: ${env:RUNNER_TEMP}\msys\msys64\usr\bin\bash.exe -ilc "cd $OLDPWD && cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'" 
+# FIXME: Replace hardcoded path
+      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd $OLDPWD && cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'" 
 
     - name: Build
       run: msys2do cmake --build build
