--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
 
     - name: Configure
 # FIXME: Replace hardcoded path
-      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd $OLDPWD && cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'" 
+      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd ${GITHUB_WORKSPACE} && cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'" 
 
     - name: Build
       run: msys2do cmake --build build
