--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
     - name: Configure
 # FIXME: Replace hardcoded path
 #      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "pwd && echo `$OLDPWD && echo ^$PWD && echo ${env:OLDPWD} && cd `$OLDPWD && pwd && cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'"
-      run: cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'"
+      run: cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'
 
     - name: Build
       run: msys2do cmake --build build
