--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,9 @@ jobs:
 #      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "pwd && echo `$OLDPWD && echo ^$PWD && echo ${env:OLDPWD} && cd `$OLDPWD && pwd && cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'"
 #      run: cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'
 #      run: cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'
-      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
+#      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
+#      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
+      run: msys2do find /usr/bin && /usr/bin/cmake -B build -DTW_BUILD_ID='github' && pwd
 
     - name: Build
       run: msys2do cmake --build build
