--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
 #      run: cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'
 #      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
 #      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
-      run: msys2do find /usr/bin && /usr/bin/cmake -B build -DTW_BUILD_ID='github' && pwd
+      run: msys2do find /usr/bin && /usr/bin/cmake.exe -B build -DTW_BUILD_ID='github' && pwd
 
     - name: Build
       run: msys2do cmake --build build
