--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
       run: msys2do pacman --noconfirm -S mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
 
-    - run: msys2do pacman --noconfirm -Ql cmake
+#    - run: msys2do pacman --noconfirm -Ql cmake
 
 #    - run: msys2do ls -lisa /usr/bin/cmake*
 
