--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,9 +94,10 @@ jobs:
     - name: Configure
 # FIXME: Replace hardcoded path
 #      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "pwd && echo `$OLDPWD && echo ^$PWD && echo ${env:OLDPWD} && cd `$OLDPWD && pwd && cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'"
+      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd `$OLDPWD && pwd && cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'"
 #      run: cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'
 #      run: cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'
-      run: msys2do cmake -G `\"MSYS Makefiles`\" -B build
+#      run: msys2do cmake -G `\"MSYS Makefiles`\" -B build
 #      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
 #      run: msys2do pwd && which cmake && /usr/bin/cmake -B build -G `"MSYS Makefiles`" -DTW_BUILD_ID='github' && pwd
 #      run: msys2do find /usr/bin && /usr/bin/cmake.exe -B build -DTW_BUILD_ID='github' && pwd
