--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,33 +76,17 @@ jobs:
       with:
         update: true
 
-    - name: Update Git Rev Info
-      run: msys2do ./getGitRevInfo.sh
-
-    - run: ls src
-    - run: cat src/GitRev.h
-
-    - run: msys2do pacman --noconfirm -Ss cmake
-    - run: msys2do pacman --noconfirm -Ss poppler
-    - run: msys2do pacman --noconfirm -Ss qt5
-    - run: msys2do pacman --noconfirm -Ss hunspell
-    - run: msys2do pacman --noconfirm -Ss lua
-    - run: msys2do pacman --noconfirm -Ss make
-    - run: msys2do pacman --noconfirm -Ss diff
-
     - name: Install dependencies
       # diffutils is needed by getGitRevInfo.sh
       run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-diffutils mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
-
-    - run: msys2do pacman --noconfirm -Ql mingw-w64-x86_64-make
 
 #    - run: msys2do ls -lisa /usr/bin/cmake*
 
     - name: Configure
 # FIXME: Replace hardcoded path
 #      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "pwd && echo `$OLDPWD && echo ^$PWD && echo ${env:OLDPWD} && cd `$OLDPWD && pwd && cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'"
-      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd `$OLDPWD && pwd && cmake -G 'MSYS Makefiles' -DCMAKE_MAKE_PROGRAM='mingw32-make' -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi'"
+      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd `$OLDPWD && cmake -G 'MSYS Makefiles' -DCMAKE_MAKE_PROGRAM='mingw32-make' -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi'"
 #      run: cmake -G 'MinGW Makefiles' -B build -DTW_BUILD_ID='github'
 #      run: cmake -G 'MSYS Makefiles' -B build -DTW_BUILD_ID='github'
 
