Revert changes to CMakeLists (MSYS)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,13 +120,13 @@ SET(TeXworks_VERSION ${TeXworks_VER_MAJOR}.${TeXworks_VER_MINOR}.${TeXworks_VER_
 
 # Make sure we have up-to-date git commit infos
 IF ( NOT CMAKE_CROSSCOMPILING )
-	IF ( WIN32 AND NOT MSYS )
+	IF ( WIN32 )
 		EXECUTE_PROCESS(COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.bat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 		ADD_CUSTOM_TARGET(GitRev ALL COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.bat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMENT "Update git commit info")
-	ELSE ( WIN32 AND NOT MSYS )
+	ELSE ( WIN32 )
 		EXECUTE_PROCESS(COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 		ADD_CUSTOM_TARGET(GitRev ALL COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMENT "Update git commit info")
-	ENDIF ( WIN32 AND NOT MSYS )
+	ENDIF ( WIN32 )
 ENDIF ( NOT CMAKE_CROSSCOMPILING)
 MESSAGE( STATUS "Git commit info updated" )
 
