--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
       with:
         update: true
 
-    - run: msys2do pacman -Ss git
+#    - run: msys2do pacman -Ss git
 
     - name: Install dependencies
       # git, diffutils are needed by getGitRevInfo.sh
@@ -85,8 +85,8 @@ jobs:
 
 #    - run: msys2do ls -lisa /usr/bin/cmake*
 
-    - name: Update Git Revision Info
-      run: msys2do ./getGitRevInfo.sh
+#    - name: Update Git Revision Info
+#      run: msys2do ./getGitRevInfo.sh
 
     - name: Configure
 # FIXME: Replace hardcoded path
