--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,9 +124,7 @@ IF ( NOT CMAKE_CROSSCOMPILING )
 		EXECUTE_PROCESS(COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.bat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 		ADD_CUSTOM_TARGET(GitRev ALL COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.bat WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMENT "Update git commit info")
 	ELSE ( WIN32 AND NOT MSYS )
-		EXECUTE_PROCESS(COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} RESULT_VARIABLE tmpRes OUTPUT_VARIABLE tmpOut ERROR_VARIABLE tmpOut)
-		message(STATUS "RESULT: ${tmpRes}")
-		message(STATUS "OUTPUT: ${tmpOut}")
+		EXECUTE_PROCESS(COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 		ADD_CUSTOM_TARGET(GitRev ALL COMMAND ${CMAKE_SOURCE_DIR}/getGitRevInfo.sh WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMENT "Update git commit info")
 	ENDIF ( WIN32 AND NOT MSYS )
 	MESSAGE( STATUS "Git commit info updated" )
