--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,6 +102,13 @@ jobs:
       run: msys2do ctest -V
       working-directory: build
 
+    - run: 7z a TeXworks.zip libTWLuaPlugin.dll TeXworks.exe
+      working-directory: build
+
+    - uses: actions/upload-artifact@v1
+      with:
+        path: build/TeXworks.zip
+
   build-macosx:
     name: Build on Mac OS X
     runs-on: macos-latest
