Get info about qt, poppler

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,9 @@ jobs:
       with:
         update: true
 
+    - run: msys2do pacman -Ss qt5
+    - run: msys2do pacman -Ss poppler
+
     - name: Install dependencies
       # git, diffutils are needed by getGitRevInfo.sh
       run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-diffutils mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
