--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
 #      run: msys2do cmake -G `\"MSYS Makefiles`\" -B build
 
     - name: Build
-      run: msys2do cmake --build build
+      run: msys2do cmake --build build --parallel
 
     - run: msys2do find .
 
