--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Configure
 # FIXME: Replace hardcoded path
 #      run: d:\a\_temp\msys\msys64\usr\bin\bash.exe -ilc "cd `$OLDPWD && cmake -G 'MSYS Makefiles' -DCMAKE_MAKE_PROGRAM='mingw32-make' -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi'"
-      run: msys2do cmake -G `\`"MSYS Makefiles`\`" -DCMAKE_MAKE_PROGRAM='mingw32-make' -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi'
+      run: msys2do cmake -G `\`"MSYS Makefiles`\`" -DCMAKE_MAKE_PROGRAM='mingw32-make' -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi' -DCMAKE_INSTALL_PREFIX=install
 
 #      run: msys2do cmake -G "MSYS Makefiles" -B build
 #      run: msys2do cmake -G `"MSYS Makefiles`" -B build
@@ -98,6 +98,9 @@ jobs:
 
     - name: Build
       run: msys2do cmake --build build --parallel
+
+    - name: Install
+      run: msys2do cmake --build build --target install
 
     - run: msys2do find .
 
