--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,7 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: TeXworks
-        path: build/install
+        path: install
 
   build-macosx:
     name: Build on Mac OS X
