--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,35 @@ jobs:
       run: xvfb-run ctest -V
       working-directory: build
 
+################################################################################
+
+  build-mxe:
+    name: Build for Windows (MXE)
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: |
+        wget -qO - "https://keyserver.ubuntu.com/pks/lookup?op=get&options=mr&search=0xC6BF758A33A3A276" | sudo apt-key add -
+        sudo add-apt-repository --yes --update deb https://pkg.mxe.cc/repos/apt xenial main
+        sudo apt install mxe-i686-w64-mingw32.static-cairo mxe-i686-w64-mingw32.static-curl mxe-i686-w64-mingw32.static-freetype mxe-i686-w64-mingw32.static-glib mxe-i686-w64-mingw32.static-hunspell mxe-i686-w64-mingw32.static-jpeg mxe-i686-w64-mingw32.static-lcms mxe-i686-w64-mingw32.static-libpng mxe-i686-w64-mingw32.static-libwebp mxe-i686-w64-mingw32.static-lua mxe-i686-w64-mingw32.static-openjpeg mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtscript mxe-i686-w64-mingw32.static-qttools mxe-i686-w64-mingw32.static-tiff mxe-i686-w64-mingw32.static-zlib
+
+    - name: Configure
+      run: cmake -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi' -DCMAKE_INSTALL_PREFIX=install
+
+    - name: Build
+      run: cmake --build build --parallel
+
+    - name: Install
+      run: cmake --build build --target install
+
+    - run: find .
+
+################################################################################
+
   build-win:
     name: Build on Windows
     runs-on: windows-latest
