--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
   build-mxe:
     name: Build for Windows (MXE)
     runs-on: ubuntu-latest
+    env:
+      MXEDIR: /usr/lib/mxe
+      MXETARGET: i686-w64-mingw32.static
 
     steps:
     - name: Checkout
@@ -55,13 +58,13 @@ jobs:
         sudo apt install mxe-i686-w64-mingw32.static-cairo mxe-i686-w64-mingw32.static-curl mxe-i686-w64-mingw32.static-freetype mxe-i686-w64-mingw32.static-glib mxe-i686-w64-mingw32.static-hunspell mxe-i686-w64-mingw32.static-jpeg mxe-i686-w64-mingw32.static-lcms mxe-i686-w64-mingw32.static-libpng mxe-i686-w64-mingw32.static-libwebp mxe-i686-w64-mingw32.static-lua mxe-i686-w64-mingw32.static-openjpeg mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtscript mxe-i686-w64-mingw32.static-qttools mxe-i686-w64-mingw32.static-tiff mxe-i686-w64-mingw32.static-zlib
 
     - name: Configure
-      run: cmake -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi' -DCMAKE_INSTALL_PREFIX=install
+      run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi' -DCMAKE_INSTALL_PREFIX=install
 
     - name: Build
-      run: cmake --build build --parallel
+      run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake --build build --parallel
 
     - name: Install
-      run: cmake --build build --target install
+      run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake --build build --target install
 
     - run: find .
 
