Don't upload MXE test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,9 +71,9 @@ jobs:
     - name: Install
       run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake --build build --target install
 
-    - name: Package tests
-      run: mkdir tests && cp test_*.exe tests/
-      working-directory: build
+#    - name: Package tests
+#      run: mkdir tests && cp test_*.exe tests/
+#      working-directory: build
 
     - run: find .
 
@@ -82,10 +82,10 @@ jobs:
         name: TeXworks-MXE
         path: build/install
 
-    - uses: actions/upload-artifact@v1
-      with:
-        name: tw-mxe-tests
-        path: build/tests
+#    - uses: actions/upload-artifact@v1
+#      with:
+#        name: tw-mxe-tests
+#        path: build/tests
 
 ################################################################################
 
